Fixed call on hold visibility setting

--- a/src/dovellous/src/modules/im/styles/im.scss
+++ b/src/dovellous/src/modules/im/styles/im.scss
@@ -662,29 +662,6 @@ div.m-b-0.fab>a {
             justify-content: center;
             align-items: center;
 
-            .blink {
-              border-radius: 50%;
-              width: 20px;
-              height: 20px;
-              opacity: .25;
-              margin-right: 8px;
-              background-color: rgb(255, 255, 255, 0.5);
-              -webkit-animation: blink 1.5s infinite;
-              -moz-animation: blink 1.5s infinite;
-              -o-animation: blink 1.5s infinite;
-              animation: blink 1.5s infinite;
-            }
-            .blink:after{
-              border-radius: 50%;
-              content: "";
-              position: absolute;
-              top: 1px;
-              left: 1px;
-              right: 1px;
-              bottom: 1px;
-              border: 5px solid rgb(255, 255, 255, 0.4);
-            }
-
           }
 
           .block-title:last-of-type {
@@ -708,24 +685,82 @@ div.m-b-0.fab>a {
       overflow: hidden;
 
       .call-current-state {
-          position: absolute;
-          top: 50%;
-          left: 50%;
-          margin-right: -50%;
-          transform: translate(-50%, -50%);
-          border: 1px solid transparent;
-          border-radius: 100vw;
-          padding: 12px;
-          background-color: rgba(255,255,255,0.01);
-          backdrop-filter: blur(5px);
-          font-size: 16px;
-          font-weight: 400;
+        position: absolute;
+        display: flex;
+        top: 50%;
+        left: 50%;
+        margin-right: -50%;
+        transform: translate(-50%, -50%);
+        border: 1px solid transparent;
+        border-radius: 100vw;
+        padding: 12px;
+        background-color: rgba(255, 255, 255, 0.01);
+        -webkit-backdrop-filter: blur(5px);
+        backdrop-filter: blur(15px);
+        font-size: 16px;
+        font-weight: 400;
+        flex-direction: column;
+        flex-wrap: nowrap;
+        align-items: center;
+        justify-content: center;
+        align-content: center;
+        width: 100%;
+        height: auto;
+
+          .blink-wrapper{
+
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            overflow: hidden;
+            position: absolute;
+            width: 64px;
+            height: 64px;
+            top: 0;
+            
+            i {
+              align-items: center;
+              justify-content: center;
+              overflow: hidden;
+              position: absolute;
+            }
+              
+            .blink {
+              border-radius: 50%;
+              width: 64px;
+              height: 64px;
+              opacity: 0.25;
+              margin: 12px;
+              background-color: rgba(255, 255, 255, 0.5);
+              align-items: center;
+              justify-content: center;
+              overflow: hidden;
+              position: absolute;
+              animation: blink 1.5s infinite;
+              -webkit-animation: blink 1.5s infinite;
+              -moz-animation: blink 1.5s infinite;
+              -o-animation: blink 1.5s infinite;
+              animation: blink 1.5s infinite;
+            }
+            .blink:after{
+              border-radius: 50%;
+              content: "";
+              position: absolute;
+              top: 1px;
+              left: 1px;
+              right: 1px;
+              bottom: 1px;
+              border: 5px solid rgb(255, 255, 255, 0.4);
+            }
+
+          }
 
       }
 
       .call-actions {
 
-        position: sticky;
+        position: inherit;
+        top: -33vw;
 
         .fab-buttons a{
           width: var(--f7-fab-size);
